# OOD_7

./: 1.txt  CMakeLists.txt  ShapesOut.cpp
Canvas/: CCanvas.cpp  CCanvas.h
Commands/: ShapesCommandProcessor.cpp  ShapesCommandProcessor.h
Factory/: IShapeFactory.h  ShapeFactory.cpp  ShapeFactory.h  ShapeTypeFactory.cpp  ShapeTypeFactory.h
Interfaces/: ICanvas.h  ICanvasDrowable.h  IShape.h  ISolidShape.h  IStyle.h  ShapeUnit.h
Picture/: Picture.cpp  Picture.h
Shapez/: CCircle.h  CColor.h  CEllipse.h  CLineSegment.h  CPoint.h  CRectangle.h  CTriangle.h  CompositeShape.h  FillStyle.h  LineStyle.h
tests/: MockCanvas.h  ShapesTests.cpp
